Added secrets for deployment. Added credit as currency on the platform. Added functionality to get CreditsTransaction. Implemented Transaction History and more
